--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!--The content below is only a placeholder and can be replaced.
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -7,9 +7,7 @@
 </div>
 <h2>Here are some links to help you start: </h2>
 <ul>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
-  </li>
+    <a mat-button target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a>
   <li>
     <h2><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
   </li>
@@ -17,4 +15,54 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+<app-vozilo></app-vozilo>-->
+<mat-sidenav-container class="example-container">
+  <mat-sidenav opened mode="side">
+    <mat-accordion>
+      <a mat-button style="text-align:center">
+        <mat-icon [routerLink]="['home']">home</mat-icon>
+      </a>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Aplikacija
+          </mat-panel-title>
+          <mat-panel-description>
+            Aplikacija za vođenje evidencije
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-nav-list>
+          <a mat-button [routerLink]="['smer']">Smer</a>
+        </mat-nav-list>
+        <mat-nav-list>
+          <a mat-button [routerLink]="['grupa']">Grupa</a>
+        </mat-nav-list>
+        <mat-nav-list>
+          <a mat-button [routerLink]="['projekat']">Projekat</a>
+        </mat-nav-list>
+        <mat-nav-list>
+            <a mat-button [routerLink]="['student']">Student</a>
+        </mat-nav-list>
+      </mat-expansion-panel>
 
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Informacije
+          </mat-panel-title>
+          <mat-panel-description>
+            Osnovne informacije o aplikaciji
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-nav-list>
+          <a mat-button [routerLink]="['about']">Pomoć</a>
+        </mat-nav-list>
+        <mat-nav-list>
+          <a mat-button [routerLink]="['author']">Autor</a>
+        </mat-nav-list>
+      </mat-expansion-panel>
+
+    </mat-accordion>
+  </mat-sidenav>
+  <router-outlet></router-outlet>
+</mat-sidenav-container>
